--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antv/g6": "^4.8.24",
     "@chakra-ui/react": "^2.8.2",
     "@lingui/conf": "^4.10.0",
     "@lingui/core": "^4.10.0",
@@ -38,6 +39,7 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "daisyui": "^4.10.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
